# Maton

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  PRINCIPLES.md  README.md  TERMINOLOGY.md  pyproject.toml  task.md
src/maton/: __init__.py  ask.py  cli.py  init.py
tests/: test_ask.py  test_init.py
