[project]
name = "maton"
version = "0.1.0"
description = "Self-improving personal agent with git-native memory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer",
]

[project.scripts]
maton = "maton.cli:app"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "ty>=0.0.28",
]

[build-system]
requires = ["uv_build>=0.5.1"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S104"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
