[project]
name = "maton"
version = "0.1.0"
description = "Self-improving personal agent with git-native memory"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Ellis Low" },
]
keywords = ["agent", "autonomous", "git", "llm", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "openai>=1.0.0",
    "typer",
]

[project.urls]
Homepage = "https://github.com/Lifto/Maton"
Repository = "https://github.com/Lifto/Maton"
Changelog = "https://github.com/Lifto/Maton/blob/main/CHANGELOG.md"

[project.scripts]
maton = "maton.cli:app"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "ty>=0.0.28",
]

[build-system]
requires = ["uv_build>=0.5.1"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S104"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
